--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Mali Cabins</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"  href="/styles/w3.css">
+<link rel="stylesheet"  href="styles/w3.css">
 </head>
 <body>
 
@@ -138,7 +138,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>7040 Barateria Blvd <a href="/styles/w3.css" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
+  <p>7040 Barateria Blvd <a href="styles/w3.css" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
 </footer>
 
 </body>
