--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">cabin</div>
+        <div class="w3-display-topleft w3-black w3-padding">Cabin</div>
         <img src="Images/wch Cabin night.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/Images/Cabin8.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding"> Home</div>
+        <img src="Images/Cabin8.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/Images/cabin6.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding"> Casa </div>
+        <img src="Images/cabin6.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Pool</div>
-        <img src="/Images/night pool.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding"> Pool</div>
+        <img src="Images/night pool.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
@@ -67,26 +67,26 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/Images/Wch tv.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding"></div>
+        <img src="Images/Wch tv.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/Images/cabin inside tv on.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding"></div>
+        <img src="Images/cabin inside tv on.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <div class="w3-display-topleft w3-black w3-padding"></div>
         <img src="/Images/Inside cabins.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding"></div>
-        <img src="/Images/day pool.jpg" alt="House" style="width:99%">
+        <img src="Images/day pool.jpg" alt="House" style="width:99%">
       </div>
     </div>
   </div>
@@ -129,7 +129,7 @@
   
 <!-- Image of location/map -->
 <div class="w3-container">
-  <img src="/Images/Map.png" class="w3-image" style="width:100%">
+  <img src="Images/Map.png" class="w3-image" style="width:100%">
 </div>
 
 <!-- End page content -->
