--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding"> Casa </div>
+        <div class="w3-display-topleft w3-black w3-padding"> </div>
         <img src="Images/cabin6.jpg" alt="House" style="width:100%">
       </div>
     </div>
@@ -67,7 +67,7 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding"></div>
+        <div class="w3-display-topleft w3-black w3-padding"> Furnished </div>
         <img src="Images/Wch tv.jpg" alt="House" style="width:99%">
       </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding"></div>
-        <img src="/Images/Inside cabins.jpg" alt="House" style="width:99%">
+        <img src="Images/Inside cabins.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
